# FaceDetection_DLIB

./: CMakeLists.txt  README.md  big_face.cpp  face.cpp  main.cpp
